tests/invalid/trait/method_duplicate.facet
trait Duplicated {
  fn next(self: &mut Self) -> ();
  fn next(self: &mut Self) -> ();
}

fn main() -> unrestricted () {
  ()
}
